--- a/safari/iOS/Info.plist
+++ b/safari/iOS/Info.plist
@@ -4,12 +4,10 @@
 <dict>
 	<key>CFBundleVersion</key>
 	<string>GIT_COMMIT_COUNT</string>
-	<key>NSExtension</key>
+	<key>UIApplicationSceneManifest</key>
 	<dict>
-		<key>NSExtensionPointIdentifier</key>
-		<string>com.apple.Safari.web-extension</string>
-		<key>NSExtensionPrincipalClass</key>
-		<string>$(PRODUCT_MODULE_NAME).SafariWebExtensionHandler</string>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<false/>
 	</dict>
 </dict>
 </plist>
